--- a/index.html
+++ b/index.html
@@ -33,15 +33,20 @@
     </div>
 
     <div class="box", id="banner2">
-        <img src="Imagens/Banner F1.png" alt="F1" width="100%">
+        <img src="Imagens/Hero_Large_Desktop_1440x500_Future-Neymar.webp" alt="F1" width="100%">
         <button type="button">ACELERE</button>
 
     </div>
 
     <div class="box", id="banner3">
-        <img src="Imagens/Hero_Large_Desktop_1440x500_Future-Neymar.webp" alt="Ney" width="100%">
+        <img src="Imagens/Banner F1.png" alt="Ney" width="100%">
         <button type="button">NegoNey</button>
     </div>
 
+
+    <div class="produtos-neybanner">
+        <h2>A NOVA DE NEYMAR JR.</h2>
+        <div class="chuteiras"></div>
+    </div>
 </body>
 </html>
