commit pagina colecao

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
         <img id="logoheader" src="Imagens/puma-se-eps-vector-logo.png" width="50px" height="50px" alt="">
            <ul id="menuhero">
-            <li>Homens</li>
-            <li>Mulheres</li>
-            <li>Infantil</li>
-            <li>Formula 1</li>
-            <li>Coleções</li>
+            <li class="li-menuhero">Homens</li>
+            <li class="li-menuhero">Mulheres</li>
+            <li class="li-menuhero">Infantil</li>
+            <li class="li-menuhero">Formula 1</li>
+            <li class="li-menuhero">Coleções</li>
 
            </ul>
            <div>       
